Fix z-index on overlapped level input

--- a/src/actor/monster/styles/monster/_main-tab.scss
+++ b/src/actor/monster/styles/monster/_main-tab.scss
@@ -11,10 +11,11 @@
   justify-content: right;
   align-items: center;
   margin: 0 5px 0 15px;
-  &:first-child {
-    z-index: 1;
-  }
   & > p {
     font-size: medium;
   }
+}
+
+#monsterLevel {
+  z-index: 1;
 }
